# toyC

./: ast.txt  dune-project  risc-V.txt  riscv-V.txt
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/lib/: all-00000000000000000000000000000000
_build/.aliases/default/test/: all-00000000000000000000000000000000
_build/default/: ToyC_riscv.dune-package  ToyC_riscv.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: ToyC_riscv_lib.cma  ToyC_riscv_lib.cmxa  ToyC_riscv_lib.cmxs  dune  lexer.ml  parser.ml  parser.mli  parser__mock.ml.mock  parser__mock.mli.inferred  toyC_riscv_lib.ml-gen
_build/default/lib/.ToyC_riscv_lib.objs/: toyC_riscv_lib__Ast.impl.all-deps  toyC_riscv_lib__Lexer.impl.all-deps  toyC_riscv_lib__Parser.impl.all-deps  toyC_riscv_lib__Parser.intf.all-deps
_build/default/lib/.ToyC_riscv_lib.objs/byte/: toyC_riscv_lib.cmi  toyC_riscv_lib.cmo  toyC_riscv_lib.cmt  toyC_riscv_lib__Ast.cmi  toyC_riscv_lib__Ast.cmo  toyC_riscv_lib__Ast.cmt  toyC_riscv_lib__Lexer.cmi  toyC_riscv_lib__Lexer.cmo  toyC_riscv_lib__Lexer.cmt  toyC_riscv_lib__Parser.cmi  toyC_riscv_lib__Parser.cmo  (+2 more)
_build/default/lib/.merlin-conf/: lib-ToyC_riscv_lib
_build/default/test/: input.toyc
lib/: ast.ml  lexer.mll  parser.mly
test/: 02_assignment.tc  03_if_else.tc  05_function_call.tc  06_continue.tc  07_scope_shadow.tc  08_short_circuit.tc  10_void_fn.tc  11_precedence.tc  12_division_check.tc  13_scope_block.tc  14_nested_if_while.tc  15_multiple_return_paths.tc
(+7 files in other folders)
